<resources>
    <string name="app_name">ActivePoints</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="need_account">Need an account?</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="hint_username">Full Name</string>
    <string name="btn_register">Sign Up</string>
    <string name="register_header">sign up in seconds and let\'s get active!</string>
    <string name="social_media_account">or sign up using your social media account</string>
    <string name="social_media_account2">sign in using your social media account</string>
    <string name="credentials">or enter your credentials</string>
    <string name="already_registered">already registered?</string>
    <string name="btn_link_to_login"><u>login here.</u></string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_login">Log in</string>
    <string name="quote">\"You don\'t have to be great to start, but you have to start to be great\" -ZigZagler</string>
    <string name="spin">SPIN!</string>
    <string name="wheel_of_fortune">Wheel of Multiplier</string>
    <string name="title_activity_tracker">Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="tracker">Activity</string>
    <string name="distance">Distance</string>
    <string name="distance_km">Distance (km)</string>
    <string name="duration">Duration</string>
    <string name="calories">Calories</string>
    <string name="start">Start</string>
    <string name="stop">Hold to Finish</string>
    <string name="ap_result"><u>AP Result</u></string>
    <string name="ap_activity">Activity</string>
    <string name="ap_rounding">Rounding</string>
    <string name="ap_multiplier">Multiplier</string>
    <string name="ap_total">Total</string>
    <string name="back_to_activity">Run Again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="welcome_1">Be Active.</string>
    <string name="welcome_1a">Get Rewards.</string>
    <string name="welcome_1aexpl">Get active rewards simply for being active, and redeem your points for amazing deals from our partners!</string>
    <string name="welcome_1b">For a Cause.</string>
    <string name="welcome_1bexpl">Join us in building healthy society and saving our earth from global warming.</string>
    <string name="welcome_2">Let\'s Get Started !</string>
    <string name="join_now">Join Now</string>

    <!-- Names -->
    <string-array name="badgesName">
        <item>Badge 1</item>
        <item>Badge 2</item>
        <item>Badge 3</item>
        <item>Badge 4</item>
        <item>Badge 5</item>
    </string-array>

    <!-- Pictures -->
    <array name="badgesId">
        <item>@drawable/badges_example</item>
        <item>@drawable/badges_example</item>
        <item>@drawable/badges_example</item>
        <item>@drawable/badges_example</item>
        <item>@drawable/badges_example</item>
    </array>

    <!-- contact type -->
    <string-array name="badgesInfo">
        <item>1 step</item>
        <item>10,000 steps</item>
        <item>30,000 steps</item>
        <item>100,000 steps</item>
        <item>1,000,000 steps</item>
    </string-array>
</resources>
