<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image_view"
        android:src="@drawable/swipe_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/myImageViewText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="144dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/join_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/button2"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@drawable/button_rounded"
        android:layout_alignTop="@+id/myImageViewText1"
        android:layout_alignStart="@+id/myImageViewText1"
        android:layout_alignEnd="@+id/myImageViewText1" />

    <TextView
        android:id="@+id/link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_link_to_login"
        android:textColor="@color/btn_login"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/link_registered"
        android:layout_alignBottom="@+id/link_registered"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp" />

    <TextView
        android:id="@+id/link_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/already_registered"
        android:textColor="@color/btn_login_bg"
        android:layout_marginTop="17dp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/button2"
        android:layout_toStartOf="@+id/link_login" />

</RelativeLayout>