<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:src="@drawable/loginheader"
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="126dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:src="@drawable/email_login"
                android:id="@+id/logo_email"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txLayoutEmail"
                android:layout_toRightOf="@id/logo_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/password_login"
                android:id="@+id/logo_password"
                android:layout_below="@id/logo_email"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_toEndOf="@id/logo_password"
                android:layout_below="@id/txLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnRegister"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:textStyle="bold"
                android:layout_weight="1"/>


        </LinearLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"/>

    </LinearLayout>
</RelativeLayout>
