<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image_view"
        android:src="@drawable/swipe_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/myImageViewText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_1"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginStart="91dp"
        android:layout_marginBottom="109dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/myImageViewText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_1a"
        android:textSize="20sp"
        android:textColor="@color/colorFontWelcome2a"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_alignBaseline="@+id/myImageViewText1"
        android:layout_alignBottom="@+id/myImageViewText1"
        android:layout_toEndOf="@+id/myImageViewText1" />

    <TextView
        android:text="@string/welcome_1aexpl"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myImageViewText3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:layout_below="@+id/myImageViewText2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>